Unreviewed, relanding with TestWTF fix https://bugs.webkit.org/show_bug.cgi?id=309200 rdar://171758273

Zero is empty key, so you need to use
WTF::UnsignedWithZeroKeyHashTraits explicitly.

Test: Tools/TestWebKitAPI/Tests/WTF/SmallSet.cpp

* Source/JavaScriptCore/b3/air/AirAllocateRegistersByGraphColoring.cpp:
* Source/JavaScriptCore/b3/air/AirCode.h:
* Source/WTF/wtf/SmallSet.h:
* Tools/TestWebKitAPI/Tests/WTF/SmallSet.cpp:
(TestWebKitAPI::testSmallSetOfUnsigned):
(TestWebKitAPI::testVectorsOfSmallSetsOfUnsigned):

Canonical link: https://commits.webkit.org/308679@main